Updated the script 2

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 </head>
 <body style="background-color:rgb(0, 0, 0);">
     <div class="container">
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5190.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5465.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5524.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
-      <div class="item" style="background-image:"><img src="\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5190.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5465.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5524.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
+      <div class="item" style="background-image:"><img src="\BSA_TEST_WORKSHOP\assets\DSCF5058.JPG" alt="" width="200px"></div>
     </div>
 </html>
